# newspaper_explorer

./: .env.example  .gitignore  LICENSE  README.md  TODO.md  pyproject.toml  requirements-dev.txt  requirements.txt  tokenizer.md
.github/: copilot-instructions.md
data/sources/: der_tag.json
docs/: CLI.md  CONFIGURATION_PHILOSOPHY.md  DATA.md  DATA_ARCHITECTURE.md  DATA_LOADER.md  DATA_QUICKREF.md  ENTITIES.md  ENTITY_EXTRACTION_ADAPTATION.md  IMAGES.md  INSTALL.md  LLM.md  LLM_IMPLEMENTATION.md  LLM_QUICKSTART.md  NORMALIZATION.md  QUERY_ARCHITECTURE.md
examples/: validate_images_example.py
notebooks/: Visualisierung.ipynb  text_extractor.ipynb
results/der_tag/: empty_xml_files.txt
results/der_tag/emotions/: ALL_emotions_means_by_id.outliers_topN.tsv  ALL_emotions_means_by_id.tsv  ALL_emotions_merged.tsv
results/der_tag/topics/: topics_analysis.csv
src/newspaper_explorer/: main.py
src/newspaper_explorer/analysis/entities/: extraction.py  gliner_examples.py  gliner_extraction.py  llm_examples.py  llm_extraction.py  method_comparison.py
src/newspaper_explorer/analysis/query/: engine.py  examples.py
src/newspaper_explorer/analysis/topics/: bertopic.py
src/newspaper_explorer/cli/: analyze.py  data.py
src/newspaper_explorer/cli/data/: commands.py  common.py  download.py  images.py  info.py  loading.py  preprocessing.py
src/newspaper_explorer/config/: base.py  environment.py
src/newspaper_explorer/data/: cleaning.py  download.py  fixes.py  loading.py
src/newspaper_explorer/data/download/: images.py  text.py
src/newspaper_explorer/data/loading/: aggregation.py  loader.py  workers.py
src/newspaper_explorer/data/parser/: alto.py
src/newspaper_explorer/data/preprocessing/: cleaning.py  filtering.py  linguistic.py  normalization.py  pipeline.py
src/newspaper_explorer/data/utils/: alto_parser.py  images.py  mets_parser.py  text.py  validation.py
src/newspaper_explorer/llm/: client.py
src/newspaper_explorer/llm/prompts/: base.py  concept_extraction.py  emotion_analysis.py  entity_extraction.py  summarization.py  text_quality.py  topic_analysis.py
src/newspaper_explorer/llm/schemas/: concept_extraction.py  emotion_analysis.py  entity_extraction.py  summarization.py  text_quality.py  topic_analysis.py
src/newspaper_explorer/ui/: .gitkeep  app.py  utils.py
src/newspaper_explorer/utils/: .gitkeep  cli.py  config.py  llm.py  llm_examples.py  prompts.py  queries.py  query_examples.py  schemas.py  sources.py
tests/: test_main.py
tests/cli/: test_data_commands.py
tests/data/: test_download.py  test_images.py  test_loading.py  test_normalization.py  test_text_utils.py  test_validation.py
tests/utils/: test_sources.py
